apps/podinfo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-demo
  labels:
    platform-blueprint.io/policy: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
