apps/podinfo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: platform-demo
  labels:
    app.kubernetes.io/instance: podinfo
    app.kubernetes.io/name: podinfo
spec:
  ingressClassName: nginx
  rules:
    - host: podinfo.local
      http:
        paths:
          - backend:
              service:
                name: podinfo
                port:
                  number: 9898
            path: /
            pathType: Prefix
